
5.2a2 -> 5.2a3:
    - jbj: update po files (Translation Project).
    - jbj: yarn: lobotomize yarn.c conditioned on HAVE_PTHREAD_H.
    - jbj: rpmz: toss the pbzip2 carcass into the compression cassoulet ...
    - rse: upgrade devtool environment to: GNU m4 1.4.12, Perl 5.10.0, OpenSSL 0.9.8j, NEON 0.28.4, SQLite 3.6.11, File 5.00
    - rse: finally switch devtool from LZMA to XZ, too.
    - rse: remove ugly --with-lzma to --with-xz hack (really not needed)
    - rse: cleanup a few recently introduced compile-time warnings
    - jbj: rpmz: add attribution and debugging to rpmzq.
    - jbj: rpmz: carve out job queue and buffer pool management from pigz.
    - jbj: rpmz: carve out an opaque trace logging subsystem from pigz.
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - jbj: bzdio: finish abstraction between FD_t <-> rpmbz methods.
    - jbj: bzdio: stub-in an abstraction between FD_t <-> rpmbz methods.
    - jbj: bzdio: hmm, revert the pop/replace patch, there's more todo++ ...
    - jbj: bzdio: pop/replace ufdio with bzdio (including a fdno).
    - jbj: bzdio: take out the rubbish.
    - jbj: bzdio: stage the multi-block BZIP2 payload code for debugging.
    - jbj: bzdio: populate rpmbz with all but bz->fp, rearrange code to taste.
    - jbj: bzdio: use the rpmbz container to carry around BZFILE *bzfile.
    - jbj: bzdio: add annotation for bzip2, add (unused) rpmbz container.
    - jbj: rpmz: add a modified version of rpmpigz (before merging with rpmz).
    - jbj: rpmz: add Fchown/Fchmod, attempt to preserve owner/perms/timestamp.
    - jbj: rpmz: swipe xz AutoFu to detect timestamps.
    - jbj: rpmz: swipe xz AutoFu to detect physmem/ncpus.
    - jbj: yarn: add to rpmio.
    - jbj: rpmz: stub in argv[0] processing to set operation mode.
    - jbj: rpmz: stub in RPMZ envvar option processing.
    - jbj: fix: eliminate a argvSplit() memory leak.