@@ -437,7 +437,7 @@ const char * dnlNextIterator(/*@null@*/ DNLI_t dnli)
     return dn;
 }
 
-#if defined(HAVE_PTHREAD_H)
+#if defined(WITH_PTHREADS)
 static void * iosmThread(void * arg)
 	/*@globals h_errno, fileSystem, internalState @*/
 	/*@modifies arg, fileSystem, internalState @*/
@@ -454,7 +454,7 @@ int iosmNext(IOSM_t iosm, iosmFileStage nstage)
 	/*@modifies iosm, fileSystem, internalState @*/
 {
     iosm->nstage = nstage;
-#if defined(HAVE_PTHREAD_H)
+#if defined(WITH_PTHREADS)
     if (iosm->multithreaded)
 	return rpmsqJoin( rpmsqThread(iosmThread, iosm) );
 #endif
