@@ -1,5 +1,6 @@
 
 5.2a2 -> 5.2a3:
+    - rse: use Pthreads under --with-pthreads controlled WITH_PTHREADS and not <pthreads.h> existance-derived HAVE_PTHREADS_H 
     - jbj: update po files (Translation Project).
     - jbj: yarn: lobotomize yarn.c conditioned on HAVE_PTHREAD_H.
     - jbj: rpmz: toss the pbzip2 carcass into the compression cassoulet ...
